--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,18 +1,20 @@
 spring.application.name=API
 # --- MySQL database config ---
 spring.datasource.url=jdbc:mysql://localhost:3306/qlsv?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=ngochuy
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # --- Hibernate / JPA ---
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
-# --- Charset config (n?u có Unicode) ---
+# --- Charset config
 spring.datasource.hikari.connection-init-sql=SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci
 
-# --- C?u hình email ---
+# --- C?u h\uFFFDnh email ---
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=maianhkhoi04@gmail.com
